--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <Space
+        android:layout_width="150px"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="200px" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="190px"
+            android:layout_weight="0"
+            android:gravity="center"
+            android:text="the ultimate fun creator"
+            android:textSize="34sp" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="100px"
+            android:text="in this application you will create the perfect vacation by choosing and writing your options" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="100px"
+            android:layout_weight="0" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="120px"
+            android:text="the type of vacation" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="100px"
+            android:layout_weight="0" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="match_parent"
+            android:layout_height="120px"
+            android:text="gear" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="100px"
+            android:layout_weight="0" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="match_parent"
+            android:layout_height="120px"
+            android:text="name" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="100px"
+            android:layout_weight="0" />
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="match_parent"
+            android:layout_height="120px"
+            android:text="Button" />
+    </LinearLayout>
+
+    <Space
+        android:layout_width="150px"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
+
+</LinearLayout>
