--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,7 @@
             android:id="@+id/type"
             android:layout_width="match_parent"
             android:layout_height="120px"
+            android:onClick="What_type"
             android:text="the type of vacation" />
 
         <Space
@@ -57,6 +58,7 @@
             android:id="@+id/gear"
             android:layout_width="match_parent"
             android:layout_height="120px"
+            android:onClick="What_gear"
             android:text="gear" />
 
         <Space
@@ -68,6 +70,7 @@
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="120px"
+            android:onClick="What_name"
             android:text="name" />
 
         <Space
@@ -79,6 +82,7 @@
             android:id="@+id/sure"
             android:layout_width="match_parent"
             android:layout_height="120px"
+            android:onClick="Are_sure"
             android:text="sure" />
     </LinearLayout>
 
